adjusted canvas-skills-grid min height

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -165,7 +165,6 @@
                           type="image/avif"
                           media="(min-width: 1200px)"
                           sizes="100vw"
-                          fetchpriority="high"
                         />
                         <source
                           srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,c_fill,dpr_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif"
@@ -180,8 +179,8 @@
                           width="364" 
                           height="186" 
                           style="aspect-ratio: 1.957 / 1;  object-fit: cover; width: 100%; height: auto;" 
-                          loading="lazy" 
-                          fetchpriority="low" 
+                          loading="lazy"
+                          fetchpriority="auto"
                           decoding="async"
                         />
                       </picture>
@@ -242,7 +241,6 @@
                           type="image/avif"
                           media="(min-width: 1200px)"
                           sizes="100vw"
-                          fetchpriority="high"
                         />
                         <source
                           srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,c_fill,fl_force_strip,dpr_auto,w_auto/v1743469949/seo-grade_mmztmf.avif"
@@ -258,6 +256,7 @@
                           height="314"
                           style="aspect-ratio: 1.16 / 1; object-fit: cover; width: 93%; height: auto; display: block;"
                           loading="lazy"
+                          fetchpriority="auto"
                           decoding="async"
                         />
                       </picture>
@@ -384,7 +383,6 @@
                             type="image/avif"
                             media="(min-width: 1200px)"
                             sizes="100vw"
-                            fetchpriority="high"
                           />
                           <source
                             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_auto/v1742916681/tech-trends-start-desktop_cbbbqf.avif"
@@ -399,6 +397,7 @@
                             height="376"
                             style="aspect-ratio: 355 / 376; width: 93%; height: auto; object-fit: cover; display: block; "
                             loading="lazy"
+                          fetchpriority="auto"
                             decoding="async"
                           />
                         </picture>
@@ -417,7 +416,6 @@
                             type="image/avif"
                             media="(min-width: 1200px)"
                             sizes="100vw"
-                            fetchpriority="high"
                           />
                           <source
                             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_auto/v1742916681/tech-trends-finish-desktop_dctwrz.avif"
@@ -432,6 +430,7 @@
                             height="376"
                             style="aspect-ratio: 355 / 376; width: 93%; height: auto; object-fit: cover; display: block;"
                             loading="lazy"
+                          fetchpriority="auto"
                             decoding="async"
                           />
                         </picture>
@@ -495,7 +494,6 @@
                           type="image/avif"
                           media="(min-width: 1200px)"
                           sizes="100vw"
-                          fetchpriority="high"
                         />
                         <source
                           srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_auto/v1742916681/tech-trends-start-mobile_beu2ct.avif"
@@ -509,7 +507,7 @@
                           width="370"
                           height="376"
                           loading="lazy"
-                          fetchpriority="low"
+                          fetchpriority="auto"
                           style="object-fit: cover; aspect-ratio: 370 / 376; width: 93%; height: auto;"
                           decoding="async"
                         />
@@ -529,7 +527,6 @@
                           type="image/avif"
                           media="(min-width: 1200px)"
                           sizes="100vw"
-                          fetchpriority="high"
                         />
                         <source
                           srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_auto/v1742916682/tech-trends-finish-mobile_ca3hzy.avif"
@@ -544,6 +541,7 @@
                           height="393"
                           style="aspect-ratio: 370 / 393; width: 93%; height: auto; object-fit: cover; display: block;"
                           loading="lazy"
+                          fetchpriority="auto"
                           decoding="async"
                         />
                       </picture>
@@ -570,7 +568,6 @@
                         type="image/avif"
                         media="(min-width: 1200px)"
                         sizes="100vw"
-                        fetchpriority="high"
                       />
                       <source
                         srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_auto/v1732986926/hubspot-grade_hnuolf.avif"
@@ -584,7 +581,7 @@
                         width="351"
                         height="501"
                         loading="lazy"
-                        fetchpriority="low"
+                          fetchpriority="auto"
                         style="object-fit: cover; aspect-ratio: 351 / 501; width: 93%; height: auto;"
                         decoding="async"
                       />
@@ -605,7 +602,6 @@
                         type="image/avif"
                         media="(min-width: 1200px)"
                         sizes="100vw"
-                        fetchpriority="high"
                       />
                       <source
                         srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_auto/v1746550616/allisonstock-black-logo_yalqqx.avif"
@@ -619,7 +615,7 @@
                         width="332"
                         height="159"
                         loading="lazy"
-                        fetchpriority="low"
+                          fetchpriority="auto"
                         style="object-fit: cover;aspect-ratio: 332 / 159; width: 93%; height: auto;"
                         decoding="async" 
                       />
@@ -699,7 +695,6 @@
                           type="image/avif"
                           media="(min-width: 1200px)"
                           sizes="100vw"
-                          fetchpriority="high"
                         />
                         <source
                           srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_auto/v1742918096/website-design-tech-trends_xbwosg.avif"
@@ -713,7 +708,7 @@
                           width="364"
                           height="305"
                           loading="lazy"
-                          fetchpriority="low"
+                          fetchpriority="auto"
                           style="object-fit: cover;aspect-ratio: 364 / 305; width: 93%; height: auto;"
                           decoding="async"     
                           />
@@ -756,7 +751,6 @@
                           type="image/avif"
                           media="(min-width: 1200px)"
                           sizes="100vw"
-                          fetchpriority="high"
                         />
                         <source
                           srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_auto/v1747144506/past-meets-future_pmafy7.avif"
@@ -770,7 +764,7 @@
                           width="364"
                           height="425"
                           loading="lazy"
-                          fetchpriority="low"
+                          fetchpriority="auto"
                           style="object-fit: cover;aspect-ratio: 364 / 425; width: 93%; height: auto;"
                           decoding="async" 
                           />
@@ -813,7 +807,6 @@
                               type="image/avif"
                               media="(min-width: 1200px)"
                               sizes="100vw"
-                              fetchpriority="high"
                             />
                             <source
                               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_auto/v1742921918/homepage-wireframe-tech-trends_s2lkfs.avif"
@@ -828,7 +821,7 @@
                               width="370"
                               height="1255"
                               loading="lazy"
-                              fetchpriority="low"
+                              fetchpriority="auto"
                               style="object-fit: cover;aspect-ratio: 370 / 1255; width: 93%; height: auto;"
                               decoding="async" 
                             />
@@ -847,7 +840,6 @@
                               type="image/avif"
                               media="(min-width: 1200px)"
                               sizes="100vw"
-                              fetchpriority="high"
                             />
                             <source
                               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_auto/v1747145733/category-wireframe-tech-trends_ughnnv.avif"
@@ -862,7 +854,7 @@
                               width="370"
                               height="667"
                               loading="lazy"
-                              fetchpriority="low"
+                              fetchpriority="auto"
                               style="object-fit: cover;aspect-ratio: 370 / 667; width: 93%; height: auto;"
                               decoding="sync"   
                             />
@@ -881,7 +873,6 @@
                               type="image/avif"
                               media="(min-width: 1200px)"
                               sizes="100vw"
-                              fetchpriority="high"
                             />
                             <source
                               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_auto/v1742921918/article-wireframe-tech-trends_mz3vf6.avif"
@@ -896,7 +887,7 @@
                               width="370"
                               height="1255"
                               loading="lazy"
-                              fetchpriority="low"
+                              fetchpriority="auto"
                               style="object-fit: cover;aspect-ratio: 370 / 1255;width: 93%; height: auto;"
                               decoding="async" 
                             />
@@ -938,7 +929,6 @@
                         type="image/avif"
                         media="(min-width: 1200px)"
                         sizes="100vw"
-                        fetchpriority="high"
                       />
                       <source
                         srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_auto/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
@@ -953,7 +943,7 @@
                         width="364"
                         height="235"
                         loading="lazy"
-                        fetchpriority="low"
+                        fetchpriority="auto"
                         style="object-fit: cover;aspect-ratio: 364 / 235; width: 100%; height: auto;"
                         decoding="async"
                       />
@@ -1093,7 +1083,6 @@
                           type="image/avif"
                           media="(min-width: 1200px)"
                           sizes="100vw"
-                          fetchpriority="high"
                         />
                         <source
                           srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_auto/v1746550616/allisonstock-black-logo_yalqqx.avif"
@@ -1107,7 +1096,7 @@
                           width="364"
                           height="159"
                           loading="lazy"
-                          fetchpriority="low"
+                          fetchpriority="auto"
                           style="object-fit: cover;aspect-ratio: 364 / 159; width: 100%; height: auto;"
                           decoding="async" 
                         />
