--- a/pages/project1.html
+++ b/pages/project1.html
@@ -129,7 +129,7 @@
             src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip/v1733410752/girlCoding_exzsbe.avif"
             alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
             width="474"
-            height="236"
+            height="auto"
             loading="eager"
             fetchpriority="high"
             decoding="async"
