changed height, width, preload links for hero img

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -9,7 +9,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_474,h_273,fl_lossy,fl_force_strip,,dpr_auto,c_fill,g_auto/v1733410752/girlCoding_exzsbe.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_474,h_275,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1733410752/girlCoding_exzsbe.avif" 
       as="image" 
       type="image/avif" 
       media="(max-width: 480px)"
@@ -17,7 +17,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_1024,h_582,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014137/girlCoding-desktop_qjepoe.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_572,h_325,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014137/girlCoding-desktop_qjepoe.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 1200px)" 
@@ -25,7 +25,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_736,h_418,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014135/girlCoding-tablet_uund2i.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_744,h_425,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014135/girlCoding-tablet_uund2i.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 481px) and (max-width: 1199px)" 
@@ -114,22 +114,22 @@
       <div class="canvas-skills-img">
         <picture>
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_1024,h_582,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014137/girlCoding-desktop_qjepoe.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_572,h_325,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014137/girlCoding-desktop_qjepoe.avif"
             type="image/avif"
             media="(min-width: 1200px)"
             sizes="100vw"
           />
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_736,h_418,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014135/girlCoding-tablet_uund2i.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_744,h_425,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014135/girlCoding-tablet_uund2i.avif"
             type="image/avif"
             media="(min-width: 481px) and (max-width: 1199px)"
             sizes="100vw"
           />
           <img 
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_474,h_273,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1733410752/girlCoding_exzsbe.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_474,h_275,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1733410752/girlCoding_exzsbe.avif"
             alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
             width="474"
-            height="273"
+            height="275"
             loading="eager"
             fetchpriority="high"
             decoding="async"
@@ -966,7 +966,7 @@
                       <p>Throughout this project, I refined my skills as an <strong>AI Content Specialist</strong> and <strong>SEO Specialist</strong>, achieving top performance metrics and seamless user experiences. The site is WCAG-compliant and reflects my ability to craft content and platforms that resonate with a wide audience.</p>
                   </div>
                   <hr class="casestudy-hr">
-                  <div class="list-items casestudy">
+                  <div class="list-items">
                       <h3>Objectives</h3>
                       <ul>
                           <li>Develop a modern, responsive blog to spotlight advancements in technology.</li>
@@ -975,7 +975,7 @@
                       </ul>
                   </div>
                   <hr class="casestudy-hr">
-                  <div class="list-items casestudy">
+                  <div class="list-items">
                       <h3>The Role of AI</h3>
                       <p>AI tools played a crucial role in every aspect of this project, enabling me to streamline workflows, enhance creativity, and deliver high-quality results:</p>
                       <ul>
@@ -986,7 +986,7 @@
                       </ul>
                   </div>
                   <hr class="casestudy-hr">
-                  <div class="list-items casestudy">
+                  <div class="list-items">
                       <h3>SEO Optimization</h3>
                       <p>SEO was essential for the blog's success. Here's how it was integrated:</p>
                       <ul>
@@ -996,7 +996,7 @@
                       </ul>
                   </div>
                   <hr class="casestudy-hr">
-                  <div class="list-items casestudy">
+                  <div class="list-items">
                       <h3>Content Creation and Engagement</h3>
                       <p>Each article was meticulously crafted to engage readers and highlight emerging tech trends. AI tools sped up the writing process, while my editorial oversight ensured top-quality, audience-focused content:</p>
                       <ul>
@@ -1005,7 +1005,7 @@
                       </ul>
                   </div>
                   <hr class="casestudy-hr">
-                  <div class="list-items casestudy">
+                  <div class="list-items">
                       <h3>Development Process</h3>
                       <ul>
                           <li><strong>Technology Stack:</strong> HTML, CSS, JavaScript, hosted on Netlify for efficient deployment.</li>
@@ -1015,7 +1015,7 @@
                       </ul>
                   </div>
                   <hr class="casestudy-hr">
-                  <div class="list-items casestudy">
+                  <div class="list-items">
                       <h3>Key Results</h3>
                       <ul>
                           <li><strong>Performance:</strong> Achieved a perfect PageSpeed score of 100/100 and an LCP of 1.6 seconds.</li>
@@ -1024,7 +1024,7 @@
                       </ul>
                   </div>
                   <hr class="casestudy-hr">
-                  <div class="list-items casestudy">
+                  <div class="list-items">
                       <h3>Challenges and Solutions</h3>
                       <ul>
                           <li><strong>Challenge:</strong> Slow load times due to large hero images.
@@ -1040,7 +1040,7 @@
                       </ul>
                   </div>
                   <hr class="casestudy-hr">
-                  <div class="list-items casestudy">
+                  <div class="list-items">
                       <h3>Outcome</h3>
                       <p>The Tech Trends Blog is a testament to the synergy of AI-driven content creation and web development. The project demonstrates:</p>
                       <ul>
@@ -1049,7 +1049,7 @@
                           <li><strong>UI/UX Design:</strong> Creating an intuitive, futuristic platform focused on user experience.</li>
                       </ul>
                   </div>
-                  <div class="list-items casestudy">
+                  <div class="list-items">
                     <p>
                       This case study showcases my ability to create high-performing websites and content, positioning me as a valuable asset for roles like AI Content Specialist, SEO Specialist, and Digital Journalist.
                     </p>
