--- a/pages/project1.html
+++ b/pages/project1.html
@@ -13,6 +13,7 @@
       as="image" 
       type="image/avif" 
       media="(max-width: 480px)"
+      fetchpriority="high"
     >
 
     <link 
@@ -126,7 +127,7 @@
             sizes="100vw"
           />
           <img 
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_474,h_275,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1733410752/girlCoding_exzsbe.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_360,h_209,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1733410752/girlCoding_exzsbe.avif"
             alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
             width="474"
             height="275"
