--- a/pages/project1.html
+++ b/pages/project1.html
@@ -34,7 +34,7 @@
 
     <link 
       rel="preload" 
-      href="/assets/fonts/PlayfairDisplay-VariableFont_wght.woff2"
+      href="/assets/fonts/georgia.woff2"
       as="font" 
       type="font/woff2" 
       crossorigin="anonymous"
@@ -42,7 +42,7 @@
     
     <link 
       rel="preload" 
-      href="/assets/fonts/TT-Norms-Pro-Regular.woff2"
+      href="/assets/fonts/SegoeUI.woff2"
       as="font" 
       type="font/woff2" 
       crossorigin="anonymous"
