redone min-height since fonts were changed

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -155,7 +155,7 @@
                 </div>
               </div>
             </div>
-            <article class="resume-border">
+            <div class="resume-border">
               <div class="mood-board">
                 <div class="border-white">
                   <div class="border-black">
@@ -189,9 +189,9 @@
                   </div>
                 </div>
               </div>
-            </article>
-            <article class="resume-border">  
-              <div class="resume-summary">
+            </div>
+            <article class="resume-border" id="section1">  
+              <div class="resume-summary" id="resume-part1">
                 <h2>
                   AI Content Creator & SEO Specialist Portfolio Project
                 </h2>
@@ -231,7 +231,7 @@
                 </div>
               </div>
             </div>
-            <article class="resume-border">           
+            <div class="resume-border">           
               <div class="border-white">
                 <div class="border-black">
                   <div class="border-black">
@@ -265,9 +265,9 @@
                   </div>
                 </div>
               </div>
-            </article>
-            <article class="resume-border">  
-              <div class="resume-summary"> 
+            </div>
+            <article class="resume-border" id="section2">  
+              <div class="resume-summary" id="resume-part2"> 
                 <p>
                   These results highlight the powerful synergy between AI-driven solutions and a developer’s vision, demonstrating how technology can enhance accessibility, functionality, and performance. They reflect my dedication to building websites that are not only fast and accessible but also strategically designed to meet user needs and boost engagement.
                 </p>
@@ -305,7 +305,7 @@
                 </div>
               </div>
             </div>
-            <article class="resume-border">
+            <div class="resume-border">
               <div class="grade-text">
                 <div class="grades">
                   <div class="grade-title">
@@ -368,8 +368,8 @@
                   </div>
                 </div>
               </div>
-            </article>
-            <article class="resume-border">
+            </div>
+            <div class="resume-border">
               <div class="grade-text">
                 <div class="pagespeed-container">
                   <div class="pagespeed-grade-title">
@@ -440,7 +440,7 @@
                   </div>
                 </div>
               </div>  
-            </article>
+            </div>
             <div class="mood-board">
               <div class="border-white" id="resume-border">
                 <div class="resume-date" id="project-title">
@@ -449,7 +449,7 @@
                 </div>
               </div>
             </div>
-            <article class="resume-border">
+            <div class="resume-border">
               <div class="grade-text">
                 <div class="grades">
                   <div class="grade-title">
@@ -480,8 +480,8 @@
                   <div class="grade-item"><p>100</p></div>
                 </div>
               </div>
-            </article>
-            <article class="resume-border">
+            </div>
+            <div class="resume-border">
               <div class="pagespeed-container">
                 <div class="pagespeed-grade-title">
                   <h3>where we started</h3>
@@ -550,8 +550,8 @@
                   </div>
                 </div>
               </div>
-            </article>
-            <article class="resume-border">
+            </div>
+            <div class="resume-border" >
               <div class="mood-board">
                 <div class="border-white" id="resume-border">
                   <div class="resume-date" id="project-title">
@@ -590,10 +590,10 @@
                   </div>
                 </div>
               </div>
-            </article>
+            </div>
           </section>
           <section id="the-author">
-            <article class="resume-border">
+            <div class="resume-border">
               <div class="border-white">
                 <div class="border-black">
                   <div class="author-bio">
@@ -613,20 +613,20 @@
                       <img 
                         src="/img/allisonstock-black-logo-mobile.avif"
                         alt="Photo of Genny Allison, the web developer and AI content specialist"
-                        width="350"
-                        height="167"
+                        width="376"
+                        height="164"
                         loading="lazy"
-                          fetchpriority="auto"
-                        style="object-fit: cover;aspect-ratio: 350 / 167; width: 93%; height: auto;"
+                        fetchpriority="auto"
+                        style="object-fit: cover;aspect-ratio: 376 / 164; width: 100%; height: auto;"
                         decoding="async" 
                       />
-                    </picture>
+                    </picture> 
                   </div>
                 </div>
               </div>
-            </article>
-            <article class="resume-border">  
-              <div class="resume-summary">
+            </div>
+            <div class="resume-border">  
+              <div class="resume-summary" id="resume-part3">
                 <div class="author-bio-text">
                   <p>
                     <i>Curious about your website's performance?
@@ -674,7 +674,7 @@
                   </p>
                 </div>
               </div>
-            </article>
+            </div>
           </section>
           <section id="the-design">
             <div class="design">
@@ -687,9 +687,9 @@
                 </div>
               </div>
               <div class="resume-border">
-                <div class="mood-board">
-                  <div class="border-white">
-                    <div class="border-black">
+                <div class="border-white">
+                  <div class="border-black">
+                    <div class="mood-board" id="moodboard-img">
                       <picture>
                         <source
                           srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1742918096/website-design-tech-trends_xbwosg.avif"
@@ -742,10 +742,10 @@
                   </div>
                 </div>
               </div>
-              <div class="resume-border">
-                <div class="mood-board">
-                  <div class="border-white">
-                    <div class="border-black">
+              <div class="resume-border">             
+                <div class="border-white">
+                  <div class="border-black">
+                    <div class="mood-board" id="past-meets-future-img">
                       <picture>
                         <source
                           srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1747144506/past-meets-future_pmafy7.avif"
@@ -796,7 +796,7 @@
                   </div>
                 </div>
               </div>
-              <article class="resume-border"> 
+              <div class="resume-border"> 
                 <div class="wireframe-grid">
                   <div class="wireframe">
                     <div class="border-white">
@@ -911,7 +911,7 @@
                     </div>
                   </div> 
                 </div>
-              </article>
+              </div>
             </div>
             <div id="casestudy">
               <div class="mood-board">
@@ -921,39 +921,41 @@
                   </div>
                 </div>
               </div>
-              <div class="resume-border">
-                <div class="mood-board">
-                  <div class="border-white">
-                    <picture>
-                      <source
-                        srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
-                        type="image/avif"
-                        media="(min-width: 1200px)"
-                        sizes="100vw"
-                      />
-                      <source
-                        srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
-                        type="image/avif"
-                        media="(min-width: 481px) and (max-width: 1199px)"
-                        sizes="100vw"
-                      />
-                      <img 
-                        src="/img/tech-trends-welcome-cute-robot-mobile.avif"
-                        alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
-                        object-fit="cover"
-                        width="377"
-                        height="243"
-                        loading="lazy"
-                        fetchpriority="auto"
-                        style="object-fit: cover;aspect-ratio: 377 / 243; width: 100%; height: auto;"
-                        decoding="async"
-                      />
-                    </picture> 
+              <div class="resume-border">             
+                <div class="border-white">
+                  <div class="border-black">
+                    <div class="mood-board" id="cute-robot-img">
+                      <picture>
+                        <source
+                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                          type="image/avif"
+                          media="(min-width: 1200px)"
+                          sizes="100vw"
+                        />
+                        <source
+                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                          type="image/avif"
+                          media="(min-width: 481px) and (max-width: 1199px)"
+                          sizes="100vw"
+                        />
+                        <img 
+                          src="/img/tech-trends-welcome-cute-robot-mobile.avif"
+                          alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
+                          object-fit="cover"
+                          width="377"
+                          height="243"
+                          loading="lazy"
+                          fetchpriority="auto"
+                          style="object-fit: cover;aspect-ratio: 377 / 243; width: 100%; height: auto;"
+                          decoding="async"
+                        />
+                      </picture> 
+                    </div>
                   </div>
                 </div>
               </div>
-              <article class="resume-border">   
-                <div class="resume-summary casestudy-container">
+              <article class="resume-border" id="section3">   
+                <div class="resume-summary casestudy-container" id="resume-part4">
                   <div class="casestudy">
                     <p><strong>Case Study:</strong> Tech Trends Blog</p>
                     <p><strong>Role:</strong> Full-Stack Developer, AI Content Creator, SEO Specialist</p>
@@ -1073,7 +1075,7 @@
             </div>
           </section>
           <section id="contact">
-            <article class="resume-border">
+            <article class="resume-border" id="section4" >
               <div class="border-white">
                 <div class="border-black">
                   <div class="author-bio">
