adjusted hero img height and width

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -130,9 +130,10 @@
             src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_474,h_275,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1733410752/girlCoding_exzsbe.avif"
             alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
             width="474"
-            height="auto"
+            height="280"
             loading="eager"
             fetchpriority="high"
+            style="aspect-ratio: 1.724 / 1; object-fit: cover; width: 100%; height: auto;"
             decoding="async"
           />
         </picture>
