changed back to w_auto

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -9,7 +9,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_468,h_274,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1733410752/girlCoding_exzsbe.avif"  
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1733410752/girlCoding_exzsbe.avif"  
       as="image" 
       type="image/avif" 
       fetchpriority="high"
@@ -125,7 +125,7 @@
             sizes="100vw"
           />
           <img 
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_468,h_274,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1733410752/girlCoding_exzsbe.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1733410752/girlCoding_exzsbe.avif"
             alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
             width="468"
             height="274"
