--- a/pages/project1.html
+++ b/pages/project1.html
@@ -9,7 +9,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1733410752/girlCoding_exzsbe.avif"  
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_360,h_202,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1733410752/girlCoding_exzsbe.avif"  
       as="image" 
       type="image/avif" 
       fetchpriority="high"
@@ -17,7 +17,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_744,h_425,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014135/girlCoding-tablet_uund2i.avif"  
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014135/girlCoding-tablet_uund2i.avif"  
       as="image" 
       type="image/avif"
     />
@@ -25,7 +25,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_572,h_325,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014137/girlCoding-desktop_qjepoe.avif"  
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014137/girlCoding-desktop_qjepoe.avif"  
       as="image" 
       type="image/avif"
     />
@@ -113,19 +113,19 @@
       <div class="canvas-skills-img">
         <picture>
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_572,h_325,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014137/girlCoding-desktop_qjepoe.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014137/girlCoding-desktop_qjepoe.avif"
             type="image/avif"
             media="(min-width: 1200px)"
             sizes="100vw"
           />
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_744,h_425,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014135/girlCoding-tablet_uund2i.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014135/girlCoding-tablet_uund2i.avif"
             type="image/avif"
             media="(min-width: 481px) and (max-width: 1199px)"
             sizes="100vw"
           />
           <img 
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1733410752/girlCoding_exzsbe.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_360,h_202,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1733410752/girlCoding_exzsbe.avif"
             alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
             width="468"
             height="274"
