--- a/pages/project1.html
+++ b/pages/project1.html
@@ -5,29 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Genny Allison | Front-End Developer & AI Content Specialist | Tech Trends Project</title>
     <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+       
+    <!--Mobile (≤480px) -->
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_468,h_262,c_fill,g_auto,dpr_auto,fl_force_strip/v1733410752/girlCoding_exzsbe.avif"  
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_468,h_262,c_fill,g_auto,dpr_auto,fl_force_strip/v1733410752/girlCoding_exzsbe.avif" 
       as="image" 
       type="image/avif" 
-      fetchpriority="high"
+      media="(max-width: 480px)" 
+      fetchpr
+    iority="high"
     />
 
+    <!-- Tablet (481px–1199px) -->
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_768,h_432,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif"  
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_768,h_432,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif" 
       as="image" 
-      type="image/avif"
+      type="image/avif" 
+      media="(min-width: 481px) and (max-width: 1199px)" 
     />
 
-
+    <!-- Desktop (≥1200px) -->
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_1200,h_670,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif"  
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_1200,h_670,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif" 
       as="image" 
-      type="image/avif"
+      type="image/avif" 
+      media="(min-width: 1200px)" 
     />
 
     <link 
